feat: redesign homepage by gemini3

--- a/src/projects/98.ui.md
+++ b/src/projects/98.ui.md
@@ -2,11 +2,12 @@
 title: "98.ui"
 date: "2025"
 type: "个人"
+description: "基于 shadcn/ui 实现的 Windows98 风格组件库。"
+cover: "../assets/98.ui/98.ui.png"
 ---
 
 基于`shadcn/ui`实现的 Windows98 风格组件库。
 
 [网站](https://98-ui.vercel.app/)
-
 
 ![98.ui](../assets/98.ui/98.ui.png)
